@@ -7,6 +7,8 @@
 
 	* lisp/sawfish/wm/state/maximize.jl: squashed a compiler warning
 
+	* lisp/sawfish/wm/integration/kde.jl: added logout, reboot and shutdown entries
+
 2009-09-06  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/ext/fdo-menu.jl: Partial rewrite of fdo-menu [Matthew Love]
 
